Test with smaller images

--- a/http-server/Dockerfile
+++ b/http-server/Dockerfile
@@ -1,5 +1,8 @@
-FROM node:4
-MAINTAINER Tobias Gesellchen <tobias@gesellix.de> @gesellix
+#FROM node:4
+#MAINTAINER Tobias Gesellchen <tobias@gesellix.de> @gesellix
+#Test with smaller image
+FROM mhart/alpine-node
+MAINTAINER tuxik.ru@gmail.com
 
 WORKDIR /project
 COPY ./package.json /project/package.json
